@@ -22,12 +22,6 @@ ant.build.javac.target=5
 test.jvmarg=-Xrunhprof:cpu=samples,depth=20
 #test.jvmarg=
 
-# Build tests
-# build.tests=true
-
-# Build with viewer3d bindings
-# build.extra.viewer3d=true
-
 ############################
 #version=0.1
 classes.dir=classes
@@ -42,9 +36,6 @@ test.jar.dependencies=${project.name}.jar jcae-viewer3d.jar
 mesherocc.jar=lib/jcae-mesherocc.jar
 mesherocc.jar.dependencies=occjava.jar
 jpda.address=8002
-
-# Main classes requiring viewer3d
-jcae.extra.viewer3d.packages=org/jcae/mesh/MeshOEMMView.java org/jcae/mesh/MeshOEMMViewer3d.java org/jcae/mesh/MeshBoraViewer3d.java org/jcae/mesh/MeshOEMMCoarseViewer.java
 
 # test classes. They are only compiled if build.tests is set to true.
 # Some of them also require viewer3d
