@@ -4,6 +4,12 @@ trove.jar=lib/trove.jar
 # http://jcae.sourceforge.net/
 occjava.jar=lib/occjava.jar
 
+# http://jcae.sourceforge.net/
+jcae.jar=lib/jcae.jar
+
+# http://jcae.sourceforge.net/
+jcae-viewer3d.jar=lib/jcae-viewer3d.jar
+
 # http://logging.apache.org/log4j/docs/
 log4j.jar=lib/log4j.jar
 
@@ -21,7 +27,5 @@ src.dir=src
 javadoc.dir=doc/api
 project.name=${ant.project.name}
 jar.dir=lib
-
-# jar are created in jar.dir
-jcae-viewer3d.jar=${project.name}.jar
+jcae-viewer3d-amibe.jar=jcae-viewer3d-amibe.jar
 
