@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project basedir="." default="jar" name="jcae-viewer3d">
+<project basedir="." default="jar" name="jcae-viewer3d-amibe">
 
 	<target name="init">
 		<property file="build.properties"/>
@@ -12,24 +12,21 @@
 		<javac debug="true" deprecation="true" destdir="${classes.dir}" srcdir="${src.dir}">
 			<compilerarg line="${compiler.arg}"/>
 			<classpath>
-				<pathelement location="${occjava.jar}"/>
+				<pathelement location="${jcae.jar}"/>
+				<pathelement location="${jcae-viewer3d.jar}"/>
 				<pathelement location="${log4j.jar}"/>
 				<pathelement location="${trove.jar}"/>
 			</classpath>
 		</javac>
 	</target>
-
+	
 	<target name="jar" depends="compile" description="Create the viewer3d jar">
 		<mkdir dir="${jar.dir}"/>
-		<jar compress="true" jarfile="${jar.dir}/${jcae-viewer3d.jar}">
+		<jar compress="true" jarfile="${jar.dir}/${jcae-viewer3d-amibe.jar}">
 			<manifest>
-				<!-- attribute name="Main-Class" value="org.jcae.viewer3d.test.Main"/ -->
-				<attribute name="Main-Class" value="org.jcae.viewer3d.test.TextureFitterTest"/>
-				<attribute name="Class-Path" value="trove.jar occjava.jar"/>
+				<attribute name="Class-Path" value="trove.jar jcae.jar jcae-viewer3d.jar"/>
 			</manifest>
 			<fileset dir="${classes.dir}" includes="org/jcae/viewer3d/**"/>
-			<fileset dir="${classes.dir}" includes="org/jdesktop/j3d/utils/behaviors/vp/**"/>
-			<fileset dir="${src.dir}" includes="org/jcae/viewer3d/**/*.html"/>
 		</jar>
 	</target>
 
@@ -41,13 +38,16 @@
 			<sourcepath>
 				<pathelement location="${src.dir}"/>
 			</sourcepath>
+			<classpath>
+				<pathelement location="${jcae.jar}"/>
+			</classpath>
 		</javadoc>
 	</target>
 	
 	<target name="clean" description="Clean all build products." depends="init">
 		<delete dir="${classes.dir}"/>
 		<delete dir="${javadoc.dir}"/>
-		<delete file="${jar.dir}/${jcae-viewer3d.jar}"/>
+		<delete file="${jar.dir}/${jcae-viewer3d-amibe.jar}"/>
 	</target>
 	
 	<target name="dist" description="build a tar.bz2 archive to distribute sources" depends="init">
@@ -66,19 +66,12 @@
 
 	<target name="dist-bin" description="build a zip to distribute binaries" depends="jar">
 		<zip destfile="${project.name}-bin-${version}.zip">
-			<zipfileset prefix="${project.name}-${version}" file="doc/api"/>
-			<zipfileset prefix="${project.name}-${version}" file="${jar.dir}/${jcae-viewer3d.jar}"/>
-			<zipfileset prefix="${project.name}-${version}" file="${occjava.jar}"/>
+			<zipfileset prefix="${project.name}-${version}/api" dir="doc/api"/>
+			<zipfileset prefix="${project.name}-${version}" file="${jar.dir}/${jcae-viewer3d-amibe.jar}"/>
+			<zipfileset prefix="${project.name}-${version}" file="${jcae.jar}"/>
 			<zipfileset prefix="${project.name}-${version}" file="${log4j.jar}"/>
 			<zipfileset prefix="${project.name}-${version}" file="${trove.jar}"/>
 		</zip>
 	</target>
 
-	<target name="test" description="test" depends="jar">
-		<java jar="${jar.dir}/${jcae-viewer3d.jar}" fork="yes">
-			<jvmarg value="${test.jvmarg}"/>			
-			<arg value="/home/jerome/ndtkit/x53p11420200_mod.iges"/>			
-			<arg value="/home/jerome/ndtkit/DC2-Amp-bis.bmp"/>
-		</java>
-	</target>
 </project>
